@@ -95,7 +95,7 @@ function download(item, command, albumartist) {
                                     : undefined!=albumartist
                                         ? albumartist
                                         : undefined!=item.compilation && 1==parseInt(item.compilation)
-                                            ? LMS_VA_STRING
+                                            ? lmsOptions.variousArtistsString
                                             : item.artist;
                         tracks.push({id: item.id,
                             title: item.title,
