@@ -162,7 +162,6 @@
   my $noGenreFilter=Plugins::MaterialSkin::Plugin->readIntPref('server', 'noGenreFilter', 0);
   my $noRoleFilter=Plugins::MaterialSkin::Plugin->readIntPref('server', 'noRoleFilter', 0);
   my $browseagelimit=Plugins::MaterialSkin::Plugin->readIntPref('server', 'browseagelimit', 100);
-  my $useMySqueezeBoxImageproxy=Plugins::MaterialSkin::Plugin->readIntPref('server', 'useLocalImageproxy', 0) ? 0 : 1;
   my $groupdiscs=Plugins::MaterialSkin::Plugin->readIntPref('server', 'groupdiscs', 0);
   my $variousArtistsString=Plugins::MaterialSkin::Plugin->readStringPref('server', 'variousArtistsString', 'Various Artists');
   my $lang=Plugins::MaterialSkin::Plugin->readStringPref('server', 'language', 'en');
@@ -190,14 +189,13 @@
   print("const LMS_P_DSTM=$dstm;");
   print("const LMS_P_BMIX=$blissMixer;");
   print("const LMS_P_RMIX=$rndMix;");
-  print("const LMS_ARTIST_PICS=$artistPics;");
-  print("const LMS_SRV_EMBLEM=$srvEmblem;");
-  print("const LMS_NO_GENRE_FILTER=$noGenreFilter;");
-  print("const LMS_NO_ROLE_FILTER=$noRoleFilter;");
+  print("const LMS_DEF_ARTIST_PICS=$artistPics;");
+  print("const LMS_DEF_SRV_EMBLEM=$srvEmblem;");
+  print("const LMS_DEF_NO_GENRE_FILTER=$noGenreFilter;");
+  print("const LMS_DEF_NO_ROLE_FILTER=$noRoleFilter;");
   print("const LMS_NEW_MUSIC_LIMIT=$browseagelimit;");
-  print("const LMS_USE_MSB_IMG_PROXY=$useMySqueezeBoxImageproxy;");
-  print("const LMS_GROUP_DISCS=$groupdiscs;");
-  print("const LMS_VA_STRING=\"$variousArtistsString\";");
+  print("const LMS_DEF_GROUP_DISCS=$groupdiscs;");
+  print("const LMS_DEF_VA_STRING=\"$variousArtistsString\";");
   print("const LMS_LANG=\"$lang\";");
   print("const LMS_DEF_SUPPORT_RELEASE_TYPES=$supportReleaseTypes;");
   print("const LMS_DEF_GROUP_BY_RELEASE_TYPE=$groupArtistAlbumsByReleaseType;");
