@@ -9,6 +9,7 @@
 5. Reduce font size by 1px.
 6. Use configured font size in settings pages.
 7. Re-order: band, conductor, composer.
+8. Monitor more LMS settings for changes (e.g. MAI artist images).
 
 5.7.6
 -----
